src/layouts/sidebar-sidecar/sidebar-sidecar-layout.module.css
/**
 * Copyright (c) HashiCorp, Inc.
 * SPDX-License-Identifier: MPL-2.0
 */

/*
NOTE:
Relies on `--sticky-bars-height` being set,
this is currently being done in `BaseNewLayout`.
See comment in src/layouts/base-new/base-new-layout.module.css
for further details.
*/

.root {
	display: flex;
	flex-grow: 1;

	/* For a coherent visual effect, the top padding value
  must be used for sticky positioning in addition to
  padding the content area. So, we create a CSS var
  to make it reusable and express this intent. */
	--main-area-padding-top: 32px;

	/* --main-area-padding-right is consistent, regardless if sidecar is shown.
  Note that the "left" value, --main-area-padding-left, is declared in 
  core-dev-dot-layout.module.css, as the left value  must be shared with the
  navigation-header component, in order to match alignment in design specs. */
	--main-area-padding-right: 24px;

	/*
  We want our footer to have a top border which spans
  across both the main content and sidecar.
  We also want our footer content to be aligned with our main content,
  taking on the same max width and left-right padding.

  To achieve this, we set the main content max width,
  main content padding, and sidecar width as CSS variables
  to be used in the main content, sidecar, and footer containers.

  The footer itself contains an absolutely positioned :before element
  which serves as the border, and which overflows the footer on both sides.
  
  The footer container ensures this border overflow does not cause scroll
  using overflow hidden. We place an empty sidecar placeholder pseudo-element
  within this container, next to the footer, to ensure spacing is consistent.

  This method requires two separate "rows" for the main content + sidecar area,
  and for the footer area. Having to share values between them is not ideal.
  But, it sidesteps issues in mixing overflow: hidden with position: sticky.
  Details: https://css-tricks.com/dealing-with-overflow-and-position-sticky/
  */

	&.mainWidth-wide {
		--main-element-max-width: 896px;
		--sidecar-width: 312px;
	}

	&.mainWidth-narrow {
		--main-element-max-width: 680px;
		--sidecar-width: 312px;
	}
}

/**
 * Sidebar + main containers
 */

.mobileMenuContainer {
	@media (--dev-dot-hide-mobile-menu) {
		display: flex !important; /* always want this value on desktop here */
		left: 0 !important; /* always want this value on desktop here */
		position: sticky; /* fixed does not take up horiz. space the same */
		width: var(--dev-dot-sidebar-width); /* custom width overwrite */
	}
}

/* Note: container is components/mobile-menu-container */
.sidebarContentWrapper {
	flex-shrink: 1;
	flex-grow: 1;
	overflow-y: auto;
	padding-bottom: 48px;
	padding-left: 16px;
	padding-right: 16px;
	padding-top: 24px;
	position: relative;
}

.contentWrapper {
	width: 100%;

	@media (--dev-dot-hide-mobile-menu) {
		/* 100vw - 100% is the scrollbar width */
		max-width: calc(100vw - (100vw - 100%) - var(--dev-dot-sidebar-width));
	}
}

.main {
	width: 100%;
	max-width: var(--main-element-max-width);
	min-width: 0;
}

.editOnGithubLink {
	margin-top: 64px;
}

.mainAreaWrapper {
	display: flex;
	justify-content: center;
	min-height: calc(100vh - var(--navigation-header-height));
	padding-left: var(--main-area-padding-left);
	padding-right: var(--main-area-padding-right);
	padding-top: var(--main-area-padding-top);
	padding-bottom: 128px;

	@media (--dev-dot-sidecar-up) {
		padding-right: 16px;
	}
}

.breadcrumbOptOutGroup {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	margin-bottom: 32px;
}

.sidecarPosition {
	--breadcrumb-bar-height: 58px;
	--sidecar-position-top: calc(
		var(--sticky-bars-height) + var(--main-area-padding-top) +
			var(--breadcrumb-bar-height)
	);
	--sidecar-viewport-bottom-spacing: 24px;
	--max-sidecar-height: calc(
		100vh - var(--sidecar-position-top) - var(--sidecar-viewport-bottom-spacing)
	);

	display: none;

	@media (--dev-dot-sidecar-up) {
		display: flex;
		flex-direction: column;
		flex-shrink: 0;
		height: min-content;
		margin-left: 48px;
		position: sticky;
		top: var(--sidecar-position-top);
		width: var(--sidecar-width);
	}

	@media (min-width: 1440px) {
		margin-left: 64px;
	}
}

